# eii-c-utils

./: .gitignore  CMakeLists.txt  README.md  install.sh
IntelSafeString/: README.md
cmake/: EIIUtilsConfig.cmake.in  FindcJSON.cmake  InstallEIIUtils.cmake  IntelSafeString.cmake  IntelSafeString.txt.in  IntelSafeStringConfig.cmake.in  Package.cmake  nlohmann-json.cmake  safestring-cmake.patch  safestring-make.patch  safestring-memlib-c.patch  safestring-memlib.patch  safestring.patch.in
include/eii/utils/: config.h  json_config.h  json_validator.h  string.h
src/: config.c  dynlibload.c  json_config.c  json_validator.cpp  string.c
tests/: CMakeLists.txt  config_tests.cpp  dynlibload_tests.cpp
